--- a/AspCoreAdvanced/Properties/launchSettings.json
+++ b/AspCoreAdvanced/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "Hosting:Environment": "Development",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -19,6 +20,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "Hosting:Environment": "Production",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5549/"
